Fixed deck dialog overflow

--- a/styles/dialog/deckDialog.module.sass
+++ b/styles/dialog/deckDialog.module.sass
@@ -2,7 +2,7 @@
 @import '../animations'
 
 .dialog
-  overflow: hidden
+  overflow-y: auto
 
 .listContainer
   display: flex
@@ -11,7 +11,6 @@
 
   .list
     flex: 0 1 auto
-    overflow-y: auto
     padding: spacing(4, 6, 6)
     justify-content: center
 
